Add GPT-4 Turbo as model option

--- a/openai.ipynb
+++ b/openai.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVYPcZRKV0shX0BCyHzH1q",
+      "authorship_tag": "ABX9TyP7lJX8boUVwJgA2RMdGE1R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
       "cell_type": "code",
       "source": [
         "# @title Set up variables\n",
-        "model = \"gpt-3.5-turbo\" # @param [\"gpt-3.5-turbo\", \"gpt-4\", \"\"]\n",
+        "model = \"gpt-3.5-turbo\" # @param [\"gpt-3.5-turbo\", \"gpt-4\", \"gpt-4-1106-preview\"]\n",
         "system_content = \"You are expert in financial service product\" # @param {type:\"string\"}\n",
         "user_content = \"Compare the product offering of Brex vs. Ramp\" # @param {type:\"string\"}\n"
       ],
