Update user prompt to have better response

--- a/export_error.ipynb
+++ b/export_error.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1Pe8y/P6zkDmWK3rSxOkZ",
+      "authorship_tag": "ABX9TyO6rOqzaMTamLvnVQ2Kei8N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,13 +119,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "iE8Y8RIzaM2U",
-        "outputId": "ad4b1b5f-af6f-4998-cd7a-195999805d68"
+        "outputId": "7334868b-cdc3-447b-f6b6-76b5f89fe887"
       },
       "outputs": [
         {
@@ -207,7 +207,7 @@
       "metadata": {
         "id": "QVdkTBTxKeTa"
       },
-      "execution_count": 11,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -237,9 +237,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q0Mq82OM3p7b",
-        "outputId": "8549aea6-68d4-406d-b1ae-f06491fd53d7"
+        "outputId": "3199c332-9efc-449d-94ca-28bdea9685f4"
       },
-      "execution_count": 28,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +247,9 @@
           "text": [
             "INFO:llama_index.indices.loading:Loading all indices.\n",
             "Loading all indices.\n",
+            "Loading all indices.\n",
             "INFO:llama_index.indices.loading:Loading all indices.\n",
+            "Loading all indices.\n",
             "Loading all indices.\n",
             "True\n"
           ]
@@ -414,7 +416,7 @@
         "How should I fix the error?\n",
         "\n",
         "Please do 2 things:\n",
-        "1. Please provide an updated request payload.\n",
+        "1. Please provide an updated request payload and show me which part of the request payload needs to be updated with a comment.\n",
         "2. Please provide a user friendly error that I can use to display in my web application.\n",
         "\"\"\".replace(\n",
         "    \"{\", \"{{\"\n",
@@ -429,9 +431,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BfWe8KQW7Crc",
-        "outputId": "49eec91a-d288-4455-bd98-179013758544"
+        "outputId": "bb03f09f-adbf-4c16-bccd-e1c403991a25"
       },
-      "execution_count": 30,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +510,7 @@
             "How should I fix the error?\n",
             "\n",
             "Please do 2 things:\n",
-            "1. Please provide an updated request payload.\n",
+            "1. Please provide an updated request payload and show me which part of the request payload needs to be updated with a comment.\n",
             "2. Please provide a user friendly error that I can use to display in my web application.\n",
             "\n"
           ]
@@ -556,9 +558,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_mpSSAInsjDG",
-        "outputId": "94ff5aa8-3487-4a27-863a-98256836111e"
+        "outputId": "96292a9a-1484-4682-e9b7-c11851e170b8"
       },
-      "execution_count": 14,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,13 +568,16 @@
           "text": [
             "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
             "HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+            "HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
             "INFO:llama_index.query_engine.router_query_engine:Selecting query engine 0: Use this query engine to answer Quickbooks Online related API questions.\n",
+            "Selecting query engine 0: Use this query engine to answer Quickbooks Online related API questions.\n",
             "Selecting query engine 0: Use this query engine to answer Quickbooks Online related API questions.\n",
             "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
             "HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+            "HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
             "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
             "HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-            "1. Updated request payload:\n",
+            "HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
             "```json\n",
             "{\n",
             "    \"time\": \"2015-06-29T12:43:42.132-07:00\",\n",
@@ -609,14 +614,14 @@
             "                \"JournalEntryLineDetail\": {\n",
             "                    \"PostingType\": \"Credit\",\n",
             "                    \"AccountRef\": {\n",
-            "                        \"name\": \"Accounts Payable\",\n",
-            "                        \"value\": \"33\"\n",
+            "                        \"name\": \"Notes Payable\",\n",
+            "                        \"value\": \"44\"\n",
             "                    },\n",
-            "                    \"Entity\": {\n",
-            "                        \"Type\": \"Vendor\",\n",
+            "                    \"Entity\": {  // Update: Add Entity for the Credit line\n",
+            "                        \"Type\": \"Vendor\",  // Update: Change Type to \"Vendor\"\n",
             "                        \"EntityRef\": {\n",
-            "                            \"name\": \"ABC Vendor\",\n",
-            "                            \"value\": \"2\"\n",
+            "                            \"name\": \"Vendor Name\",  // Update: Replace with actual vendor name\n",
+            "                            \"value\": \"Vendor ID\"  // Update: Replace with actual vendor ID\n",
             "                        }\n",
             "                    }\n",
             "                },\n",
@@ -637,8 +642,7 @@
             "}\n",
             "```\n",
             "\n",
-            "2. User-friendly error message:\n",
-            "\"Oops! It looks like there was an issue creating the journal entry. Please ensure that a vendor is selected in the 'Name' field when using 'Accounts Payable'.\"\n"
+            "User-friendly error message: \"Please select a vendor for the credit line when using Accounts Payable.\"\n"
           ]
         }
       ]
