Update query engine tool description

--- a/export_error.ipynb
+++ b/export_error.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6rOqzaMTamLvnVQ2Kei8N",
+      "authorship_tag": "ABX9TyNCHtmQD3I/y9/4j/cNT2EL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -535,11 +535,19 @@
         "# Define tools.\n",
         "qbo_tool = QueryEngineTool.from_defaults(\n",
         "    query_engine=qbo_api_index.as_query_engine(service_context=service_context),\n",
-        "    description=\"Use this query engine to answer Quickbooks Online related API questions\",\n",
+        "    description=\"\"\"\n",
+        "      Use this query engine to answer Quickbooks Online related API questions.\n",
+        "      However, only use this query engine for journal entry related questions since\n",
+        "      we only have journal entry API documentation in the knowledge base\n",
+        "      \"\"\",\n",
         ")\n",
         "netsuite_tool = QueryEngineTool.from_defaults(\n",
         "    query_engine=netsuite_api_index.as_query_engine(service_context=service_context),\n",
-        "    description=\"Use this query engine to answer Netsuite related API questions\",\n",
+        "    description=\"\"\"\n",
+        "      Use this query engine to answer Netsuite related API questions.\n",
+        "      However, only use this query engine for journal entry related questions since\n",
+        "      we only have journal entry API documentation in the knowledge base\n",
+        "      \"\"\",\n",
         ")\n",
         "\n",
         "# Define query engine.\n",
@@ -558,9 +566,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_mpSSAInsjDG",
-        "outputId": "96292a9a-1484-4682-e9b7-c11851e170b8"
+        "outputId": "847be78a-d708-4946-dee0-b3ed5793b266"
       },
-      "execution_count": 35,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,15 +577,16 @@
             "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
             "HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
             "HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-            "INFO:llama_index.query_engine.router_query_engine:Selecting query engine 0: Use this query engine to answer Quickbooks Online related API questions.\n",
-            "Selecting query engine 0: Use this query engine to answer Quickbooks Online related API questions.\n",
-            "Selecting query engine 0: Use this query engine to answer Quickbooks Online related API questions.\n",
+            "INFO:llama_index.query_engine.router_query_engine:Selecting query engine 0: Use this query engine to answer Quickbooks Online related API questions. However, only use this query engine for journal entry related questions since we only have journal entry API documentation in the knowledge base.\n",
+            "Selecting query engine 0: Use this query engine to answer Quickbooks Online related API questions. However, only use this query engine for journal entry related questions since we only have journal entry API documentation in the knowledge base.\n",
+            "Selecting query engine 0: Use this query engine to answer Quickbooks Online related API questions. However, only use this query engine for journal entry related questions since we only have journal entry API documentation in the knowledge base.\n",
             "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
             "HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
             "HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
             "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
             "HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
             "HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+            "1. Updated request payload with comments:\n",
             "```json\n",
             "{\n",
             "    \"time\": \"2015-06-29T12:43:42.132-07:00\",\n",
@@ -617,11 +626,11 @@
             "                        \"name\": \"Notes Payable\",\n",
             "                        \"value\": \"44\"\n",
             "                    },\n",
-            "                    \"Entity\": {  // Update: Add Entity for the Credit line\n",
-            "                        \"Type\": \"Vendor\",  // Update: Change Type to \"Vendor\"\n",
+            "                    \"Entity\": {  // Add Entity for the Credit line\n",
+            "                        \"Type\": \"Vendor\",  // Update Type to \"Vendor\"\n",
             "                        \"EntityRef\": {\n",
-            "                            \"name\": \"Vendor Name\",  // Update: Replace with actual vendor name\n",
-            "                            \"value\": \"Vendor ID\"  // Update: Replace with actual vendor ID\n",
+            "                            \"name\": \"Vendor Name\",  // Add the vendor name here\n",
+            "                            \"value\": \"Vendor ID\"  // Add the vendor ID here\n",
             "                        }\n",
             "                    }\n",
             "                },\n",
@@ -642,7 +651,8 @@
             "}\n",
             "```\n",
             "\n",
-            "User-friendly error message: \"Please select a vendor for the credit line when using Accounts Payable.\"\n"
+            "2. User-friendly error message:\n",
+            "\"Please select a vendor for the credit line when using Accounts Payable.\"\n"
           ]
         }
       ]
