Takeaways from this exercise

--- a/export_error.ipynb
+++ b/export_error.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQl0rFW2nIuZA5be2DlW6i",
+      "authorship_tag": "ABX9TyPfQjPR8SwfCsN9IehAQEdt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,6 +103,18 @@
       ],
       "metadata": {
         "id": "Ek1jPzHiaPL6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Takeaways\n",
+        "\n",
+        "*   There are different LLM models (e.g. OpenAI gpt-3, OpenAI gpt-4, etc) and different prompting techniques (e.g. RAG, ReAct, OpenAI Assistant API, etc) that we can use to tackle this problem. Each combination of them will yield different results.\n",
+        "*   Hence, I think it is vital for us to invest in evaluation earlier so that we can make an informed decison on what LLM model, what technique, and other dimension of consideration not covered here when applying LLM in our product."
+      ],
+      "metadata": {
+        "id": "EwJa23lq8MF7"
       }
     },
     {
@@ -448,25 +460,7 @@
         "    \"}\", \"}}\"\n",
         ")\n",
         "\n",
-        "print(user_prompt)\n",
-        "\n",
-        "# Use this for approach #3\n",
-        "simple_user_prompt = f\"\"\"\n",
-        "We are trying to create the following journal entry object in Quickbooks Online Rest API.\n",
-        "But, we ran into the following error. How should I fix this?\n",
-        "\n",
-        "Journal entry API payload:\n",
-        "```json\n",
-        "{journal_entry_payload}\n",
-        "```\n",
-        "\n",
-        "Error:\n",
-        "{export_error}\n",
-        "\"\"\".replace(\n",
-        "    \"{\", \"{{\"\n",
-        ").replace(\n",
-        "    \"}\", \"}}\"\n",
-        ")"
+        "print(user_prompt)"
       ],
       "metadata": {
         "colab": {
@@ -1355,7 +1349,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Approach #4 - Ensemble query engine"
+        "# Approach #4 - Ensemble query engine\n",
+        "\n",
+        "*   Use different query tools to address user prompt and let LLM to conclude the final result based on the response from all query tools."
       ],
       "metadata": {
         "id": "k2hn5Lqua294"
