Use few-shot prompting technique for rule suggestion

--- a/rule_suggestion.ipynb
+++ b/rule_suggestion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpM7SOuXAC9hA18XWgT4sZ",
+      "authorship_tag": "ABX9TyMo2PWi9+Bpz6vcbnqhJooy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,15 +45,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "caxpoK7LeYX6",
-        "outputId": "7df3acc4-171b-4fc0-9a19-faaf987005cc"
+        "outputId": "0f74bf81-464a-480f-88ab-6806dae8eeff"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Defaulting to user installation because normal site-packages is not writeable\r\n",
+            "Defaulting to user installation because normal site-packages is not writeable\n",
             "Requirement already satisfied: openai in /Users/eekaiboon/Library/Python/3.9/lib/python/site-packages (1.2.3)\n",
             "Requirement already satisfied: anyio<4,>=3.5.0 in /Users/eekaiboon/Library/Python/3.9/lib/python/site-packages (from openai) (3.7.1)\n",
             "Requirement already satisfied: distro<2,>=1.7.0 in /Users/eekaiboon/Library/Python/3.9/lib/python/site-packages (from openai) (1.8.0)\n",
@@ -78,13 +78,12 @@
       "source": [
         "# @title Set up variables\n",
         "model = \"gpt-4-1106-preview\" # @param [\"gpt-3.5-turbo\", \"gpt-4\", \"gpt-4-1106-preview\"]\n",
-        "system_content = \"You are an accountant. You are familiar with accounting tool that can be used to automate expense categorization.\" # @param {type:\"string\"}\n",
-        "user_content = \"Compare the product offering of Brex vs. Ramp\"\n"
+        "system_content = \"You are an accountant. You are familiar with accounting tool that can be used to automate expense categorization.\" # @param {type:\"string\"}"
       ],
       "metadata": {
         "id": "LazHCcEWnv5u"
       },
-      "execution_count": 2,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -103,66 +102,85 @@
         "  \"amount_usd_cents\": 1000,\n",
         "  \"accrued_at_epoch\": 1699750201,\n",
         "  \"memo\": \"Work laptop for a new hire\",\n",
-        "  \"customer_account_id\": \"cuacc_1\"\n",
-        "}\n",
-        "```\n",
-        "\n",
-        "Example of the same expense and with accounting fields:\n",
-        "```\n",
-        "{\n",
-        "  \"expense_id\": \"exp_1\",\n",
-        "  \"amount_usd_cents\": 1000,\n",
-        "  \"accrued_at_epoch\": 1699750201,\n",
-        "  \"memo\": \"Work laptop for a new hire software engineer\",\n",
         "  \"customer_account_id\": \"cuacc_1\",\n",
-        "  \"accounting_fields\": {\n",
-        "    \"debit_general_ledger_account\": \"Office Equipment\",\n",
-        "    \"credit_general_ledger_account\": \"Accounts Payable\",\n",
+        "  \"employee\": {\n",
         "    \"department\": \"Engineering\"\n",
         "  }\n",
         "}\n",
         "```\n",
         "\n",
-        "Here are a list of accounting fields that you can use to categorize an expense\n",
-        "(Note that the `general_ledger` accounting field type can be used to set both\n",
-        "the `debit_general_ledger_account` and `credit_general_ledger_account`\n",
-        "accounting fields of an expense):\n",
+        "Rule example:\n",
+        "```\n",
+        "{\n",
+        "  \"filter\": {\n",
+        "    \"operator\": \"MATCH\",\n",
+        "    \"target_field\": \"employee.department\",\n",
+        "    \"target_value\": \"Engineering\"\n",
+        "  },\n",
+        "  \"action\": {\n",
+        "    \"accounting_field\": \"department\",\n",
+        "    \"accounting_field_value\": \"Engineering\"\n",
+        "  }\n",
+        "}\n",
+        "```\n",
+        "\n",
+        "Expense after applying the above rule example:\n",
+        "```\n",
+        "{\n",
+        "  \"expense_id\": \"exp_1\",\n",
+        "  \"amount_usd_cents\": 1000,\n",
+        "  \"accrued_at_epoch\": 1699750201,\n",
+        "  \"memo\": \"Work laptop for a new hire\",\n",
+        "  \"customer_account_id\": \"cuacc_1\",\n",
+        "  \"employee\": {\n",
+        "    \"department\": \"Engineering\"\n",
+        "  }\n",
+        "  \"accounting_fields\": {\n",
+        "    \"department\": \"Engineering\"\n",
+        "  }\n",
+        "}\n",
+        "```\n",
+        "\n",
+        "Here are a list of accounting fields that you can use to set the action part of\n",
+        "a rule:\n",
         "[\n",
         "  {\n",
-        "    \"accounting_field_type\": \"general_ledger\",\n",
+        "    \"accounting_field\": \"general_ledger\",\n",
         "    \"accounting_field_value\": \"Office Equipment\"\n",
         "  },\n",
         "  {\n",
-        "    \"accounting_field_type\": \"general_ledger\",\n",
+        "    \"accounting_field\": \"general_ledger\",\n",
         "    \"accounting_field_value\": \"Accounts Payable\"\n",
         "  },\n",
         "  {\n",
-        "    \"accounting_field_type\": \"general_ledger\",\n",
+        "    \"accounting_field\": \"general_ledger\",\n",
         "    \"accounting_field_value\": \"Accounts Receivable\"\n",
         "  },\n",
         "  {\n",
-        "    \"accounting_field_type\": \"general_ledger\",\n",
+        "    \"accounting_field\": \"general_ledger\",\n",
         "    \"accounting_field_value\": \"Travel Expense\"\n",
         "  },\n",
         "  {\n",
-        "    \"accounting_field_type\": \"department\",\n",
+        "    \"accounting_field\": \"department\",\n",
         "    \"accounting_field_value\": \"Engineering\"\n",
         "  },\n",
         "  {\n",
-        "    \"accounting_field_type\": \"department\",\n",
+        "    \"accounting_field\": \"department\",\n",
         "    \"accounting_field_value\": \"Sales\"\n",
         "  }\n",
         "]\n",
         "\n",
-        "Please set accounting fields for the following expense and output the result in\n",
-        "json format simlar to the example provided:\n",
+        "Please create a rule for the following expense:\n",
         "```\n",
         "{\n",
-        "  \"expense_id\": \"exp_2\",\n",
-        "  \"amount_usd_cents\": 2500,\n",
-        "  \"accrued_at_epoch\": 1699750400,\n",
-        "  \"memo\": \"Lunch when travelling to company engineering offsite\",\n",
-        "  \"customer_account_id\": \"cuacc_1\"\n",
+        "  \"expense_id\": \"exp_1\",\n",
+        "  \"amount_usd_cents\": 1000,\n",
+        "  \"accrued_at_epoch\": 1699750201,\n",
+        "  \"memo\": \"Travel to sales conference\",\n",
+        "  \"customer_account_id\": \"cuacc_1\",\n",
+        "  \"employee\": {\n",
+        "    \"department\": \"Sales\"\n",
+        "  }\n",
         "}\n",
         "```\n",
         "\"\"\""
@@ -170,7 +188,7 @@
       "metadata": {
         "id": "aYwThBZbp7zh"
       },
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -193,18 +211,18 @@
       ],
       "metadata": {
         "id": "g5Wcr2WtjKYF",
-        "outputId": "014b0647-640a-4a6a-aef3-a522b8ef1bed",
+        "outputId": "c30e3cbb-99c1-4dbd-b652-b46c448099c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ChatCompletionMessage(content='Based on the expense information provided, it seems appropriate to categorize the expense under \"Travel Expense\" for the general ledger account, as it pertains to costs incurred while traveling. Additionally, since the event mentioned is an engineering offsite, the department can be categorized under \"Engineering.\"\\n\\nTherefore, the expense with the added accounting fields would look something like this in json format:\\n\\n```json\\n{\\n  \"expense_id\": \"exp_2\",\\n  \"amount_usd_cents\": 2500,\\n  \"accrued_at_epoch\": 1699750400,\\n  \"memo\": \"Lunch when travelling to company engineering offsite\",\\n  \"customer_account_id\": \"cuacc_1\",\\n  \"accounting_fields\": {\\n    \"debit_general_ledger_account\": \"Travel Expense\",\\n    \"credit_general_ledger_account\": \"Accounts Payable\",\\n    \"department\": \"Engineering\"\\n  }\\n}\\n```\\n\\nThe debit account \"Travel Expense\" is selected as it directly relates to the nature of the expense, i.e., a meal cost during travel. The credit account is typically \"Accounts Payable\" for external expenses waiting to be paid. The department is set as \"Engineering\" based on the mention of the company\\'s engineering offsite in the memo field.', role='assistant', function_call=None, tool_calls=None)\n"
+            "ChatCompletionMessage(content='Based on the expense example provided, we can create a rule to categorize this expense under the \"Travel Expense\" general ledger account and the \"Sales\" department. Here is how the rule can be defined:\\n\\n```json\\n{\\n  \"filter\": {\\n    \"operator\": \"MATCH\",\\n    \"target_field\": \"employee.department\",\\n    \"target_value\": \"Sales\"\\n  },\\n  \"action\": [\\n    {\\n      \"accounting_field\": \"general_ledger\",\\n      \"accounting_field_value\": \"Travel Expense\"\\n    },\\n    {\\n      \"accounting_field\": \"department\",\\n      \"accounting_field_value\": \"Sales\"\\n    }\\n  ]\\n}\\n```\\n\\nThis rule will categorize the expense under the \"Travel Expense\" general ledger due to the nature of the expense described in the memo, while also associating it with the \"Sales\" department based on the employee\\'s department information.\\n\\nApplying this rule to the provided expense would result in the following updated representation of the expense:\\n\\n```json\\n{\\n  \"expense_id\": \"exp_1\",\\n  \"amount_usd_cents\": 1000,\\n  \"accrued_at_epoch\": 1699750201,\\n  \"memo\": \"Travel to sales conference\",\\n  \"customer_account_id\": \"cuacc_1\",\\n  \"employee\": {\\n    \"department\": \"Sales\"\\n  },\\n  \"accounting_fields\": {\\n    \"general_ledger\": \"Travel Expense\",\\n    \"department\": \"Sales\"\\n  }\\n}\\n```', role='assistant', function_call=None, tool_calls=None)\n"
           ]
         }
       ]
@@ -220,34 +238,56 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8AkpyYEB1-1t",
-        "outputId": "48c1c1b8-1ded-488f-c910-6da1d81b9399"
+        "outputId": "5db8edc7-5ce7-4e01-cf29-b32182d3ad20"
       },
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Based on the expense information provided, it seems appropriate to categorize the expense under \"Travel Expense\" for the general ledger account, as it pertains to costs incurred while traveling. Additionally, since the event mentioned is an engineering offsite, the department can be categorized under \"Engineering.\"\n",
-            "\n",
-            "Therefore, the expense with the added accounting fields would look something like this in json format:\n",
+            "Based on the expense example provided, we can create a rule to categorize this expense under the \"Travel Expense\" general ledger account and the \"Sales\" department. Here is how the rule can be defined:\n",
             "\n",
             "```json\n",
             "{\n",
-            "  \"expense_id\": \"exp_2\",\n",
-            "  \"amount_usd_cents\": 2500,\n",
-            "  \"accrued_at_epoch\": 1699750400,\n",
-            "  \"memo\": \"Lunch when travelling to company engineering offsite\",\n",
-            "  \"customer_account_id\": \"cuacc_1\",\n",
-            "  \"accounting_fields\": {\n",
-            "    \"debit_general_ledger_account\": \"Travel Expense\",\n",
-            "    \"credit_general_ledger_account\": \"Accounts Payable\",\n",
-            "    \"department\": \"Engineering\"\n",
-            "  }\n",
+            "  \"filter\": {\n",
+            "    \"operator\": \"MATCH\",\n",
+            "    \"target_field\": \"employee.department\",\n",
+            "    \"target_value\": \"Sales\"\n",
+            "  },\n",
+            "  \"action\": [\n",
+            "    {\n",
+            "      \"accounting_field\": \"general_ledger\",\n",
+            "      \"accounting_field_value\": \"Travel Expense\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"accounting_field\": \"department\",\n",
+            "      \"accounting_field_value\": \"Sales\"\n",
+            "    }\n",
+            "  ]\n",
             "}\n",
             "```\n",
             "\n",
-            "The debit account \"Travel Expense\" is selected as it directly relates to the nature of the expense, i.e., a meal cost during travel. The credit account is typically \"Accounts Payable\" for external expenses waiting to be paid. The department is set as \"Engineering\" based on the mention of the company's engineering offsite in the memo field.\n"
+            "This rule will categorize the expense under the \"Travel Expense\" general ledger due to the nature of the expense described in the memo, while also associating it with the \"Sales\" department based on the employee's department information.\n",
+            "\n",
+            "Applying this rule to the provided expense would result in the following updated representation of the expense:\n",
+            "\n",
+            "```json\n",
+            "{\n",
+            "  \"expense_id\": \"exp_1\",\n",
+            "  \"amount_usd_cents\": 1000,\n",
+            "  \"accrued_at_epoch\": 1699750201,\n",
+            "  \"memo\": \"Travel to sales conference\",\n",
+            "  \"customer_account_id\": \"cuacc_1\",\n",
+            "  \"employee\": {\n",
+            "    \"department\": \"Sales\"\n",
+            "  },\n",
+            "  \"accounting_fields\": {\n",
+            "    \"general_ledger\": \"Travel Expense\",\n",
+            "    \"department\": \"Sales\"\n",
+            "  }\n",
+            "}\n",
+            "```\n"
           ]
         }
       ]
